# eit

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml  secondary.ipynb
Backend/: backend.py  main.ipynb  main.py  pyproject.toml
Backend/lib/: lib.py
backend/: README.md  backend-api.py  backend.py  cluster_person.ipynb  examples.pkl  generate_model.py  main copy.ipynb  main.ipynb  main.py  model.txt  pyproject.toml  requests.ipynb  secondary.ipynb  server.py  structure_resist.ipynb  test_backend.py  types.py
backend/src/eit/: __init__.py  app.py  model.pkl
backend/src/eit/lib/: __init__.py
frontend/: .gitignore  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/game/: layout.tsx  page.tsx
frontend/src/app/game-2/: page.tsx
frontend/src/app/game/level1/: page.tsx
frontend/src/app/game/phase-1/: page.tsx
frontend/src/app/game/phase-1/[event]/: layout.tsx  page.tsx
frontend/src/app/game/phase-2/: page.tsx
frontend/src/app/game/phase-2/[event]/: page.tsx
frontend/src/app/level1/: page.tsx
frontend/src/components/: layout.tsx
frontend/src/components/game/: BuildingChoices.tsx  CurrentBalance.tsx  GameStateHeader.tsx  GameWrapper.tsx
frontend/src/components/pages/: buildingSizePhase.tsx  buildingStructurePhase.tsx  characterSelectionPhase.tsx  introductionPhase.tsx  locationSelectPhase.tsx  reflectionPhase.tsx  resultPhase.tsx  simulationPhase.tsx
frontend/src/components/ui/: NepalMap.tsx  ProgressBar.tsx
frontend/src/contexts/: GameContext.tsx  QueryContext.tsx
frontend/src/hooks/: useCurrentEvent.ts
frontend/src/lib/: choices.ts  constants.ts  featureImportanceMap.ts  formatCost.ts  gameStateAdapter.ts  types.ts
frontend/src/styles/: custom-animations.css  leaflet-custom.css
frontend/src/types/: Character.tsx  GamePhase.tsx  Location.tsx  api.ts  damageGrade.ts  index.ts  simulation.ts
