[project]
name = "eit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.6",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pip>=25.0",
    "plotnine>=0.14.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
