[project]
name = "eit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "kagglehub>=0.3.6",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pip>=25.0",
    "plotnine>=0.14.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=1.10.0",
    "torchvision>=0.11.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eit"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]
torchvision = [
    { index = "pytorch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
