[project]
name = "eit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "kagglehub>=0.3.6",
    "kmodes>=0.12.2",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pip>=25.0",
    "plotnine>=0.14.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

# https://docs.astral.sh/uv/guides/integration/pytorch/#configuring-accelerators-with-environment-markers
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eit"]

